# 2Africa-OpenAPI

./: .gitignore  .markdownlint.json  .spectral.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE-sdk  LICENSE-spec  NOTICE  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_in_spec.md  rfc_seed.md
.github/workflows/: cts.yml  docs-deploy.yml  markdown-lint.yml  sdk-javascript.yml  sdk-python.yml  spec-lint.yml
docs/: 00-overview.md  01-versioning.md  02-auth.md  03-data-conventions.md  04-privacy.md  05-upstream.md  06-downstream.md  07-webhooks.md  08-errors.md  09-sdks.md  10-compliance.md  README.md  appendix-a-glossary.md  appendix-b-implementers.md
examples/: README.md  postman-collection.json
examples/curl/: 01-healthz.sh  02-publish-manifest.sh  03-upstream-yields.sh  04-upstream-prices.sh  05-upstream-gap-records.sh  06-upstream-credit-pack.sh  07-upstream-telemetry.sh  08-downstream-dictionaries.sh  09-downstream-prices.sh  10-downstream-benchmarks.sh  11-downstream-marketplace.sh  12-downstream-procurement.sh
examples/helpers/: README.md
examples/manifests/: balanced.yaml  open.yaml  strict.yaml
examples/webhook-replay/: verify_signature.py
rfcs/: 0000-template.md  019-webhook-backfill.md  021-marketplace-response.md
sdks/java/: README.md
sdks/javascript/: README.md  package.json  tsconfig.json
sdks/python/: README.md  pyproject.toml  regenerate-from-openapi-generator.sh
sdks/python/examples/: quickstart.py
sdks/python/tests/: test_client.py
sdks/python/twoafrica_openapi/: __init__.py  client.py  errors.py  models.py
spec/: openapi.yaml  privacy-manifest.schema.yaml  webhooks.asyncapi.yaml
tests/: README.md
tests/cts/: README.md
(+27 files in other folders)
