# SPDX-FileCopyrightText: 2026 2Africa AI and OpenAPI Contributors
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires      = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "twoafrica-openapi"
version         = "1.1.0rc1"
description     = "Python SDK for the 2Africa OpenAPI federation protocol."
readme          = "README.md"
requires-python = ">=3.10"
license         = { text = "Apache-2.0" }
authors         = [{ name = "2Africa OpenAPI Maintainers", email = "openapi@2africa.ai" }]
keywords        = ["openapi", "agritech", "africa", "federation", "oauth2"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "requests >= 2.28",
]

[project.optional-dependencies]
yaml = ["PyYAML >= 6"]
dev  = ["pytest >= 7", "pytest-mock", "responses"]

[project.urls]
Homepage      = "https://github.com/2AfricaAI/2Africa-OpenAPI"
Documentation = "https://2africaai.github.io/2Africa-OpenAPI/"
Source        = "https://github.com/2AfricaAI/2Africa-OpenAPI/tree/main/sdks/python"
Issues        = "https://github.com/2AfricaAI/2Africa-OpenAPI/issues"
Changelog     = "https://github.com/2AfricaAI/2Africa-OpenAPI/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["twoafrica_openapi*"]
